# piqp

./: CHANGELOG.md  CMakeLists.txt  piqpConfig.cmake.in  pyproject.toml
.github/workflows/: matlab.yml  octave.yml  tests.yml
benchmarks/: CMakeLists.txt
ci/: cibuildwheel_matrix.py
cmake/: FindMatlab.cmake  piqpConfigWheel.cmake.in
docs/_pages/api/: settings.md
docs/_pages/interfaces/c_cpp/: getting_started_c.md  getting_started_cpp.md
docs/_pages/interfaces/matlab/: getting_started.md
docs/_pages/interfaces/python/: getting_started.md
examples/: CMakeLists.txt
include/piqp/: kkt_system.hpp  kkt_system.tpp  results.hpp  settings.hpp  solver.hpp  solver.tpp  variables.hpp
include/piqp/dense/: data.hpp  data.tpp  kkt.hpp  kkt.tpp  ldlt_no_pivot.hpp  preconditioner.hpp  preconditioner.tpp
include/piqp/sparse/: data.hpp  data.tpp  kkt.hpp  kkt.tpp  ldlt.hpp  ldlt.tpp  multistage_kkt.hpp  multistage_kkt.tpp  ordering.hpp  preconditioner.hpp  preconditioner.tpp
include/piqp/sparse/blocksparse/: block_mat.hpp
include/piqp/utils/: blasfeo_wrapper.hpp  eigen_matio.hpp  smoothing.hpp
interfaces/c/: CMakeLists.txt
interfaces/c/include/: piqp.h  piqp_typedef.h
interfaces/c/src/: piqp.cpp
interfaces/c/tests/: CMakeLists.txt
interfaces/matlab/: CMakeLists.txt  make_piqp.m  piqp.m  piqp_mex.cpp
interfaces/octave/: CMakeLists.txt  piqp.m  piqp_oct.cpp
interfaces/octave/package/: DESCRIPTION
interfaces/python/: CMakeLists.txt
interfaces/python/piqp/: __init__.py  __init__.pyi
interfaces/python/src/: instruction_set.cpp  piqp_python.cpp
src/: kkt_system.cpp  solver.cpp
src/dense/: data.cpp  kkt.cpp  preconditioner.cpp
src/sparse/: data.cpp  kkt.cpp  ldlt.cpp  multistage_kkt.cpp  preconditioner.cpp
tests/: CMakeLists.txt
tests/src/dense/: solver_test.cpp
tests/src/sparse/: kkt_test.cpp  ldlt_test.cpp  multistage_kkt_test.cpp  solver_test.cpp  utils_test.cpp
